<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TambahDataActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ini_halaman_tambah_data"/>

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/masukkan_tanggal_boss"
        android:inputType="date"
        android:focusable="false"
        android:drawableEnd="@drawable/ic_date"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/masukkan_jam_boss"
        android:inputType="time"
        android:focusable="false"
        android:drawableEnd="@drawable/ic_date"/>
</LinearLayout>